--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,14 @@ blockquote{
     margin-right: auto;
   }
 ul {
-    list-style-type: none; 
+   list-style-type: none; 
    margin: 0;
    padding: 0;
    text-align: center;
    }
    li {
-    display: inline-block; float: none
+    display: inline-block; 
+    float: none;
    }
    li a {
     color: rgb(255, 255, 255); 
