--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ p {
     color: rgb(65 57 61);
     text-align: center;
     } 
+
 pf {
     font-family: Majesti-Banner-Light;
     font-size: 16px;
@@ -31,6 +32,7 @@ blockquote{
     font-family: Majesti-Banner-Light;
     font-size: 14px;
     color: rgb(65 57 61);
+    text-align: center;
 
 }
 .center {
@@ -38,6 +40,7 @@ blockquote{
     margin-left: auto;
     margin-right: auto;
   }
+
 ul {
    list-style-type: none; 
    margin: 0;
