Testing codespace editing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body/* Background for website */ {
-    background-color: rgb(215 228 194);
+    background-color: rgb(255, 255, 255);
     }
 
 h1 /* Heading for index page, largest heading */{
